...

                    Button {
                        accountViewModel.saveUser()
                    } label: {
                        Text("Save Changes")
                    }
                    .accessibilityIdentifier("SaveChanges")
                }

                Section(header: Text("Requests")) {
                    Toggle("Extra Napkins", isOn: $accountViewModel.user.extraNapkins)
                    Toggle("Frequent Refills", isOn: $accountViewModel.user.frequentRefills)
                }
...
